--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Niek Bruins <niek@fambruins.nl>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "jest": "^26.6.3"
   }
