--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "new-day": "./scripts/new-day.js"
   },
-  "devDependencies": {
-    "jest": "^26.6.3"
-  }
+  "workspaces": [
+    "days/*",
+    "shared"
+  ]
 }
